# linglong-hub

./: .gitignore  README.md  linglong.yaml  linglong1.yaml
.reuse/: dep5
Catch2/: linglong.yaml
CuteCom/: linglong.yaml
Exiv2/: linglong.yaml
FFTW3/: linglong.yaml
FontToPng/: linglong.yaml
Hamlib/: linglong.yaml
Imath/: linglong.yaml
JUCE/: linglong.yaml
KConfig/: linglong.yaml
KolcorPicker/: linglong.yaml
LimeReport/: linglong.yaml
Log4Qt/: linglong.yaml
LuaJIT/: linglong.yaml
OCCT/: linglong.yaml
OpenColorIO/: linglong.yaml
OpenSceneGraph/: linglong.yaml
PCRE2/: linglong.yaml
PROJ/: linglong.yaml
Phoenix/: linglong.yaml
QCustomPlot/: linglong.yaml
QEverCloud/: linglong.yaml
RFID-Manager/: linglong.yaml
RabbitCommon/: linglong.yaml
SDL/: linglong.yaml
SDL2_ttf/: linglong.yaml
SDL_image/: linglong.yaml
SDL_mixer/: linglong.yaml
SDL_net/: linglong.yaml
SDL_ttf/: linglong.yaml
SFML/: linglong.yaml
YUView/.linglong-target/org.github.YUView/runtime/files/share/qtcreator/templates/wizards/projects/qml-app-template/src/maincomponentplugin/: CMakeLists.txt  maincomponentplugin.h
adwaita-qt/: linglong.yaml
alsa-lib/: linglong.yaml
appstream-glib/: linglong.yaml
argparse/: linglong.yaml
armadillo-code/: linglong.yaml
aspell/: linglong.yaml
atk/: linglong.yaml
attica/: linglong.yaml
autoconf/: linglong.yaml
automake/: linglong.yaml
automake1.11/: linglong.yaml
automake1.14.0/: linglong.yaml
automake1.15.0/: linglong.yaml
babl/: linglong.yaml
boost/: linglong.yaml
c-toxcore/: linglong.yaml
eb/: linglong.yaml
qView/.linglong-target/com.interversehq.qView/runtime/files/share/qtcreator/templates/wizards/projects/qml-app-template/: CMakeLists.txt
qView/.linglong-target/com.interversehq.qView/runtime/files/share/qtcreator/templates/wizards/projects/qml-app-template/src/main/: CMakeLists.txt
qView/.linglong-target/com.interversehq.qView/runtime/files/share/qtcreator/templates/wizards/projects/qml-app-template/src/maincomponentplugin/: maincomponentplugin.cpp
(+5446 files in other folders)
